# api/src/main/resources/public/api.yaml
@@ -528,9 +528,9 @@ components:
   schemas:
     PatchBody:
       items:
-        $ref: '#/components/schemas/JsonPatch'
+        $ref: '#/components/schemas/JsonPatchDTO'
 
-    JsonPatch:
+    JsonPatchDTO:
       type: object
       description: A JSONPatch document as defined by RFC 6902.
       required:
