# fleet.management/src/main/java/ro/agilehub/javacourse/car/hire/fleet/model/JsonPatch.java
@@ -1,0 +1,4 @@
+package ro.agilehub.javacourse.car.hire.fleet.model;
+
+public class JsonPatch {
+}
