# rental/src/main/java/ro/agilehub/javacourse/car/hire/model/JsonPatch.java
@@ -1,0 +1,4 @@
+package ro.agilehub.javacourse.car.hire.model;
+
+public class JsonPatch {
+}
