# user.management/src/main/java/ro/agilehub/javacourse/car/hire/mapper/JsonPatchDTOMapper.java
@@ -1,0 +1,11 @@
+package ro.agilehub.javacourse.car.hire.mapper;
+
+import org.mapstruct.Mapper;
+import ro.agilehub.javacourse.car.hire.api.model.JsonPatchDTO;
+import ro.agilehub.javacourse.car.hire.model.JsonPatch;
+
+@Mapper(componentModel = "spring")
+public interface JsonPatchDTOMapper {
+
+    JsonPatch toJsonPatch(JsonPatchDTO jsonPatchDTO);
+}
